Working on plugin...

--- a/index.html
+++ b/index.html
@@ -9,77 +9,77 @@
     <link rel="shortcut icon" href="http://openhamilton.ca/favicon.ico"> 
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="grid.css" />
-	<link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container container_12">
-			<h2 class="grid_12">
-				<img alt="Open Hamilton Logo" src="http://www.openhamilton.ca/logos/openhamilton.png" width="450" height="88" class="logo"/>
-			</h2>
+            <h2 class="grid_12">
+                <img alt="Open Hamilton Logo" src="http://www.openhamilton.ca/logos/openhamilton.png" width="450" height="88" class="logo"/>
+            </h2>
 
-			<div class='clear'>&nbsp;</div>
-			<div class='grid_12'>
-				<script type="text/javascript">
-					//var DowsingConfig = { height: 400, width: 960 };
-					//document.write(unescape("%3Cscript src='http://openhamilton.ca/dowsing/desktop/dowsing.js' type='text/javascript'%3E%3C/script%3E"));
-				</script>
-				<noscript>
-					<p class="alert">
-						Unfortunately, the WhereAre application requires JavaScript enabled.<br/>
-						Here's a list of modern browsers that work on the most common operating systems...
-					</p>
-				</noscript>
-				<h1>WhereAre things in Hamilton?</h1>
-				<p>WhereAre helps you find things in Hamilton such as services, bus stops, parks, and government offices in Hamilton.  If we've missed any spots let us know by going to our <a href="http://groups.google.com/group/openhamilton">Google Group</a>, messaging us on facebook, or tweeting. We always need your feedback.</p>
-	
-				<h2>Put it on your website!</h2>
-				<p>
-					You can embed WhereAre on your own site with just 2 lines of code.  Put the following code where you want the widget to be displayed on your site:
-					<pre class="code">&lt;script type="text/javascript"&gt;<br/>var DowsingConfig = { height: 500, width: 500 };<br/>document.write(unescape("%3Cscript src='http://openhamilton.ca/dowsing/desktop/dowsing.js' type='text/javascript'%3E%3C/script%3E"));<br/>&lt;/script&gt;</pre>
-					We have a help guide for setting this up. If you have any questions, come and ask in our <a href="http://groups.google.com/group/openhamilton">Google Group</a> and we'll help you get the issue sorted out.
-				</p>
-			</div>
-			<div class='clear'>&nbsp;</div> 
-			<div class='grid_12'> 
-				<h1>What is Open Hamilton?</h1>
-				<p>
-					We're a group of Hamilton citizens who want to make the city better using open data.
-				</p>
-				<p class="alert">
-					Please note: we are presently redesigning our website to to provide more open data tools.  If you wish to help, please introduce yourself <a href="http://groups.google.com/group/openhamilton">on our message boards</a>.
-				</p>
+            <div class='clear'>&nbsp;</div>
+            <div class='grid_12'>
+                <script type="text/javascript">
+                    //var DowsingConfig = { height: 400, width: 960 };
+                    document.write(unescape("%3Cscript src='./whereare.js' type='text/javascript'%3E%3C/script%3E"));
+                </script>
+                <noscript>
+                    <p class="alert">
+                        Unfortunately, the WhereAre application requires JavaScript enabled.<br/>
+                        Here's a list of modern browsers that work on the most common operating systems...
+                    </p>
+                </noscript>
+                <h1>WhereAre things in Hamilton?</h1>
+                <p>WhereAre helps you find things in Hamilton such as services, bus stops, parks, and government offices in Hamilton.  If we've missed any spots let us know by going to our <a href="http://groups.google.com/group/openhamilton">Google Group</a>, messaging us on facebook, or tweeting. We always need your feedback.</p>
+    
+                <h2>Put it on your website!</h2>
+                <p>
+                    You can embed WhereAre on your own site with just 2 lines of code.  Put the following code where you want the widget to be displayed on your site:
+                    <pre class="code">&lt;script type="text/javascript"&gt;<br/>var DowsingConfig = { height: 500, width: 500 };<br/>document.write(unescape("%3Cscript src='http://openhamilton.ca/dowsing/desktop/dowsing.js' type='text/javascript'%3E%3C/script%3E"));<br/>&lt;/script&gt;</pre>
+                    We have a help guide for setting this up. If you have any questions, come and ask in our <a href="http://groups.google.com/group/openhamilton">Google Group</a> and we'll help you get the issue sorted out.
+                </p>
+            </div>
+            <div class='clear'>&nbsp;</div> 
+            <div class='grid_12'> 
+                <h1>What is Open Hamilton?</h1>
+                <p>
+                    We're a group of Hamilton citizens who want to make the city better using open data.
+                </p>
+                <p class="alert">
+                    Please note: we are presently redesigning our website to to provide more open data tools.  If you wish to help, please introduce yourself <a href="http://groups.google.com/group/openhamilton">on our message boards</a>.
+                </p>
 
-				<h1>What is Open data?</h1>
-				<p>
-					<a href="http://en.wikipedia.org/wiki/Open_data">From the WikiPedia article</a>, <em>"Open data is the idea that certain data should be freely available to everyone to use and republish as they wish, without restrictions from copyright, patents or other mechanisms of control."</em>
-				</p>
-			</div>
-			<div class='clear'>&nbsp;</div> 
-	</div>
-	<div class="footer">
-		<br/>
-		<div class="container container_12">
-				<div class='grid_4'> 
-					<h2>Contact</h2>
-				<p>All inquiries should be sent to <a href="mailtp:email@example.com">email@example.com</a> where a memeber of the team will get back to you.</p> 
-				</div>
-				<div class='grid_4'> 
-					<h2>Follow</h2>
-					<p>Blog</p>
-					<p>Twitter</p>
-					<p>Facebook</p>
-					<p>Github</p>
-				</div>
-				<div class='grid_4'> 
-					<h2>Get involved</h2>
-					<p>Want to help us? That's great news! Join our google discussion group and introduce yourself.</p>
-				</div>
-				<div class='clear'>&nbsp;</div> 
-				<div class='grid_4'> 
-					<p><a href="http://en.wikipedia.org/wiki/Copyleft#Applying_copyleft">Copyleft</a> OpenHamilton 2011. All Wrongs Reserved.</p>
-				</div>
-				<div class='clear'>&nbsp;</div> 
-		</div>
-	</div>
+                <h1>What is Open data?</h1>
+                <p>
+                    <a href="http://en.wikipedia.org/wiki/Open_data">From the WikiPedia article</a>, <em>"Open data is the idea that certain data should be freely available to everyone to use and republish as they wish, without restrictions from copyright, patents or other mechanisms of control."</em>
+                </p>
+            </div>
+            <div class='clear'>&nbsp;</div> 
+    </div>
+    <div class="footer">
+        <br/>
+        <div class="container container_12">
+                <div class='grid_4'> 
+                    <h2>Contact</h2>
+                <p>All inquiries should be sent to <a href="mailtp:email@example.com">email@example.com</a> where a memeber of the team will get back to you.</p> 
+                </div>
+                <div class='grid_4'> 
+                    <h2>Follow</h2>
+                    <p>Blog</p>
+                    <p>Twitter</p>
+                    <p>Facebook</p>
+                    <p>Github</p>
+                </div>
+                <div class='grid_4'> 
+                    <h2>Get involved</h2>
+                    <p>Want to help us? That's great news! Join our google discussion group and introduce yourself.</p>
+                </div>
+                <div class='clear'>&nbsp;</div> 
+                <div class='grid_12'>
+                    <p class="center"><a href="http://en.wikipedia.org/wiki/Copyleft#Applying_copyleft">Copyleft</a> OpenHamilton 2011. All Wrongs Reserved.</p>
+                </div>
+                <div class='clear'>&nbsp;</div> 
+        </div>
+    </div>
   </body>
 </html>
